# Matrix-Operations-Library

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
matrix_operations/: __init__.py  operations.py
tests/: test_operations.py
web/: app.py
web/templates/: index.html
